name:                distributed-process-simplewidenet
version:             0.1.12.1
-- synopsis:            
-- description:         
homepage:            https://github.nrel.gov/stats/sdsv/sw/distributed-process-simplewidenet
license:             AllRightsReserved
license-file:        LICENSE
author:              Brian W Bush
maintainer:          brian.bush@nrel.gov
-- copyright:           
category:            Concurrency
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Control.Distributed.Process.Backend.SimpleWidenet
  build-depends:       base >=4.6 && <4.7
               ,       bytestring
               ,       distributed-process
               ,       distributed-process-simplelocalnet
               ,       network
               ,       network-transport
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
